--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -3,5 +3,6 @@
     <array name="preloaded_fonts" translatable="false">
         <item>@font/lato_thin</item>
         <item>@font/raleway_bold</item>
+        <item>@font/raleway_medium</item>
     </array>
 </resources>
