--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,10 +12,10 @@
         android:id="@+id/virtualbackdrop"
         android:layout_width="332dp"
         android:layout_height="98dp"
-        android:layout_marginTop="444dp"
+        android:layout_marginTop="620dp"
         android:backgroundTint="@color/blue"
         android:fontFamily="@font/raleway_bold"
-        android:onClick="switchScreen"
+        android:onClick="switchScreenToBackdrop"
         android:shadowColor="@color/darkblue"
         android:shadowRadius="100"
         android:text="Virtual Backdrop"
@@ -23,7 +23,7 @@
         android:textSize="30dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.506"
+        app:layout_constraintHorizontal_bias="0.607"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -69,18 +69,30 @@
         android:id="@+id/scorematch"
         android:layout_width="332dp"
         android:layout_height="98dp"
-        android:layout_marginTop="324dp"
+        android:layout_marginTop="504dp"
         android:backgroundTint="@color/blue"
         android:fontFamily="@font/raleway_bold"
-        android:onClick="switchScreen"
+        android:onClick="switchScreenToScore"
+        android:shadowColor="@color/darkblue"
+        android:shadowRadius="100"
         android:text="Match Scoring"
         android:textColor="@color/darkblue"
         android:textSize="30dp"
         android:textStyle="bold"
-        android:shadowColor="@color/darkblue"
-        android:shadowRadius="100"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.607"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="312dp"
+        android:layout_height="298dp"
+        android:layout_marginTop="228dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.484"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/bluehat" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
